--- a/photo.html
+++ b/photo.html
@@ -9,7 +9,7 @@
   <body>
     <h1>🥐 A picture of a croissant</h1>
     <img
-      src="/Images/croissant.jpg"
+      src="/image/croissant.jpg"
       alt="Homemade croissant"
       class="croissant"
     />
