Included SEO to all pages

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website</title>
+    <meta name="description" content="Learn more about Croissant" />
+    <title>Croissant Homepage</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,9 +14,11 @@
       are made of a layered yeast-leavened dough
     </p>
     <div>
-      <a href="index.html" class="home">Homepage</a
-      ><a href="photo.html" class="photo">Photo</a
-      ><a href="contact.html" class="contact">Contact</a>
+      <a href="index.html" class="home" title="Home">Homepage</a
+      ><a href="photo.html" class="photo" title="Croissant photo">Photo</a
+      ><a href="contact.html" class="contact" title="Contact croissant.com"
+        >Contact</a
+      >
     </div>
   </body>
 </html>
