--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website</title>
+    <meta name="description" content="Contact Croissant.com" />
+    <title>Contact page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,9 +16,11 @@
       for more info
     </p>
     <div>
-      <a href="index.html" class="home">Homepage</a
-      ><a href="photo.html" class="photo">Photo</a
-      ><a href="contact.html" class="contact">Contact</a>
+      <a href="index.html" class="home" title="Home">Homepage</a
+      ><a href="photo.html" class="photo" title="Contact photo">Photo</a
+      ><a href="contact.html" class="contact" title="Contact croissant.com"
+        >Contact</a
+      >
     </div>
   </body>
 </html>
