Edited SEO for all the pages

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Learn more about Croissant" />
-    <title>Croissant Homepage</title>
+    <meta name="description" content="Taste the best croissant in Town" />
+    <title>The best croissant in Ghana - croissant.com</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
