--- a/photo.html
+++ b/photo.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="See how croissant looks like" />
-    <title>Croissant photo page</title>
+    <meta
+      name="description"
+      content="Enjoy a beautiful picture of a homemade croissant"
+    />
+    <title>An example of a perfect croissant - croissant.com</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
