--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Contact Croissant.com" />
-    <title>Contact page</title>
+    <meta
+      name="description"
+      content="Contact Croissant.com to learn more about our homemade croissant"
+    />
+    <title>Contact us - croissant.com</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
